syntax = "proto3";

option csharp_namespace = "Test.ConsoleClient";

package people;

import "google/protobuf/empty.proto";

service People {
    // gets a collection of people
    rpc GetPeople (google.protobuf.Empty) returns (PeopleResponse);
}

message PeopleResponse {
    message Person {
        int32 id = 1;
        string first_name = 2;
        string last_name = 3;
    }
    repeated Person people = 1;
}